# parsing

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.build.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
data/: e2e-concurrency-2.json  e2e-concurrency-3.json  e2e-concurrency-4.json  e2e-smoke-summary.json  e2e-summary.json
data/results/133a2997481145a98938f21248b9d2c3/: result.json
data/results/229bfeb1db4c496586de6abbe95c9525/: result.json
data/results/2e20c696f66945fe936434403cbdfbbe/: result.json
data/results/4010295ae105418b892a6ff2b8758cac/: result.json
data/results/4528743c051544c0982434056e5401dd/: result.json
data/results/4838edeaefcb4df39df32e58be1c81cc/: result.json
data/test-pdfs/: manifest.json
docker/: api.Dockerfile  mastra-agent.Dockerfile  mineru.Dockerfile
docs/: BULLMQ_REDIS_TABLE_COMPARE.md  CODEBASE_GUIDE.md  TABLE_COMPARE_AGENT.md  TABLE_COMPARE_REQUEST_WALKTHROUGH.md
scripts/: create_table_example_runs.ts  download_test_pdfs.py  generate_table_fixtures.ts  run_e2e.py  test_cn_manufacturing_e2e.ts  test_table_compare_e2e.ts  test_table_compare_semantic_e2e.ts  test_table_compare_unit.ts
src/mastra/: index.ts  model.ts
src/pdfparse_agent/: __init__.py  config.py  main.py  mineru_client.py  models.py  storage.py  worker.py
src/table-compare/: job-manager.ts  mineru-client.ts  openapi.ts  queue.ts  redline.ts  semantic-compare.ts  server.ts  table-compare.ts  table-extractor.ts  table-geometry.ts  types.ts  worker.ts  workflow.ts
(+17 files in other folders)
